Fix: Run content does not fit into its frame.

--- a/web/src-static/theme-designer.less
+++ b/web/src-static/theme-designer.less
@@ -855,6 +855,7 @@
     height: 480px;
     margin-left: -160px;
     margin-top: -240px;
+    border: none;
 }
 
 .mockko-logo-titlebar {
